# arquebus

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  GitHash.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  TestSetupHelpers.cmake
lib/: CMakeLists.txt
lib/arquebus/: CMakeLists.txt  api.cpp  arquebus.cpp  shared_memory.cpp  version.hpp.in
lib/arquebus/include/: version.hpp.in
lib/arquebus/include/arquebus/: arquebus.hpp  semantic_version.hpp  shared_memory.hpp  spsc_var_msg_len_consumer.hpp  spsc_var_msg_len_host.hpp  spsc_var_msg_len_producer.hpp
lib/arquebus/include/arquebus/impl/: buffer_size.hpp  common_header.hpp  fd_handle.hpp  queue_type.hpp  shared_memory_helper.hpp  spsc_queue_variable_message_length_header.hpp
lib/arquebus/include/arquebus/impl/spsc/: variable_message_length_header.hpp
lib/arquebus/include/arquebus/spsc/var_msg/: consumer.hpp  host.hpp  producer.hpp
lib/arquebus/include/private/: shared_memory.hpp
lib/arquebus/include/private/util/: fd_handle.hpp
lib/arquebus/include/public/arquebus/: arquebus.hpp  shared_memory.hpp  spsc_var_msg_len_consumer.hpp  spsc_var_msg_len_host.hpp  spsc_var_msg_len_producer.hpp
lib/arquebus/include/public/arquebus/impl/: common_header.hpp  queue_type.hpp  spsc_queue_variable_message_length_header.hpp
src/: CMakeLists.txt
src/consumer/: CMakeLists.txt  main.cpp
src/host/: CMakeLists.txt  main.cpp
src/producer/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/lib/arquebus/: CMakeLists.txt  buffer_size_tests.cpp  shared_memory_tests.cpp
test/lib/arquebus/spsc/var_msg/: consumer_tests.cpp  producer_tests.cpp
